Fixed home page logo alignment - Ben

--- a/car-sharing-system/car-sharing-system/Theme/css/mobileFriendly.css
+++ b/car-sharing-system/car-sharing-system/Theme/css/mobileFriendly.css
@@ -15,20 +15,9 @@
         width: 100%;
     }
 
-    
-
-
-
-
-
-
-
-
-
-
 }
 
-img {
+#newsImage1, #newsImage2, #newsImage3 {
         padding-left: 27%;
         padding-top: 17%;
         vertical-align: middle;
